# libsfscheck

./: LICENSE
.github/workflows/: build.yml
libsfscheck_engine/: CMakeLists.txt
libsfscheck_engine/benchmark/: cpu_benchmark.cpp  gpu_benchmark.cpp  memory_benchmark.cpp
libsfscheck_engine/database/: device_db.json  gpu_db.json
libsfscheck_engine/include/: authenticity_engine.h  battery_detector.h  cpu_detector.h  gpu_detector.h  imei_validator.h  ram_detector.h  refurbish_detector.h  root_detector.h  sensor_detector.h  storage_detector.h  utils.h
libsfscheck_engine/src/: authenticity_engine.cpp  battery_detector.cpp  cpu_detector.cpp  gpu_detector.cpp  imei_validator.cpp  jni_bridge.cpp  ram_detector.cpp  refurbish_detector.cpp  root_detector.cpp  sensor_detector.cpp  storage_detector.cpp  utils.cpp
